2020-03-04 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_toggle_action.h: Derive GedaToggleAction from GedaAction
      instead of GtkToggleAction, remove members action_name and multikey_accel,
      add active and draw_as_radio.

    * src/widgets/geda_toggle_action.c: Redo module in oder to derive GedaToggleAction
      from GedaAction.

2020-03-03 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu.c: Simplify conditionals in geda_menu_enter_notify
      and eliminate unneeded cast. Utilize macro:

          * geda_get_widget_parent
          * geda_get_widget_style

2020-03-02 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_action.c: Revise geda_action_create_menu_item to
      reverse the order of type checking; check for GEDA_IS_TOGGLE_ACTION
      for checking for GEDA_IS_ACTION.

    * src/widgets/geda_menu.c: Utilize macro:

          * geda_get_widget_allocation

2020-02-28 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu.c: Utilize macro:

          * geda_get_container_border_width
          * geda_get_widget_style
          * geda_get_widget_window

2020-02-27 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_label.c: Change first argument to draw_insertion_cursor
      to be a pointer to a GtkWidget and eliminate ancillary widget pointer.
      Utilize macros:

          * geda_get_widget_window
          * geda_get_widget_allocation

2020-02-26 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Add macro:

          * geda_get_misc_yalign

    * src/widgets/geda_label.c: Utilize macro:

          * geda_get_misc_yalign
          * geda_get_widget_style

2020-02-25 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Add macros:

          * geda_get_misc_xpad
          * geda_get_misc_ypad

    * src/widgets/geda_label.c: Utilize macro:

          * geda_get_widget_requisition
          * geda_get_misc_ypad

2020-02-24 Wiley E. Hill <wileyhill@gmail.com>